--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,8 @@
 // Aligned with official @fluentui/tokens v2
 
 :root {
+  color-scheme: light;
+
   // ============================================================
   // BRAND / PRIMARY COLORS (BrandBlue)
   // ============================================================
